Final corrections and spellcheck.

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.61 2009/11/26 16:29:09 ith Exp $
+% $Id: dbi-intro.tex,v 1.62 2009/11/27 18:49:21 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.61 2009/11/26 16:29:09 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.62 2009/11/27 18:49:21 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -41,7 +41,7 @@ cosmological observations.
 
  
 
-One class of string-theory models that has received 
+One class of string theory models that has received 
 considerable attention is D-brane inflation
 \cite{brane1,brane2,brane3,brane4,brane5,
 brane6,brane7,brane8,brane9,brane10,brane11,brane12,brane13,
@@ -56,7 +56,7 @@ Bean:2007eh,bean}).
 The Dirac-Born-Infeld (DBI) scenario 
 of the compactified type IIB theory is a well-motivated model \cite{brane6,brane11}, 
 in which inflation is driven by one or more ${\rm D}$-branes 
-propagating in a warped `throat' background. 
+propagating in a warped ``throat'' background. 
 % 
 In the simplest version of the scenario, 
 the inflaton parametrises the radial 
@@ -64,7 +64,7 @@ position in the throat of a single ${\rm D3}$-brane.
 The brane dynamics are determined by the DBI action in such a 
 way that the inflaton's kinetic energy is bounded from above by the warped 
 brane tension. The regime where this bound is nearly saturated is 
-known as the `relativistic' limit.
+known as the ``relativistic'' limit.
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % ========================================================= %
@@ -129,7 +129,7 @@ some of the string theory concepts that will be required later to understand DBI
 inflation.
 Many review articles and text books have been written about string theory and
 its application to cosmology and a short list of recent works includes
-\cite{cline, Johnson2000, Baumann:2009ni,Kallosh:2007wm,
+Refs.~\cite{cline, Johnson2000, Baumann:2009ni,Kallosh:2007wm,
 Linde:2005dd,McAllister:2007bg}.
 
 
@@ -147,7 +147,7 @@ strings form a continuous loop while open strings have two unconnected ends.
 % different
 % string theories have been discovered. This might appear to be a significant
 % set-back in the attempt to find a single unifying theory. 
-There are several different string theories linked in pairs by a process
+There are several different string theories which are linked in pairs by a process
 called
 duality. Physical descriptions in one theory can be translated into a
 dual description in the other. The dual version often exhibits properties that
@@ -217,7 +217,7 @@ Linde:2005dd}.
 % % models.
 
 \subsection{Extra Dimensions}
-String theory predicts that the one time and three spatial dimensions that
+String theory predicts that the one time-like and three spatial dimensions that
 constitute the observable universe do not represent the complete space-time manifold.
 Instead,
 our universe is a 10 or
@@ -234,15 +234,16 @@ string theory \cite{Kaluza1921, Klein1926}. By
 compactifying an extra dimension onto a circle of finite radius an infinite
 tower of extra fields are introduced into the lower dimensional theory. The
 mass of these fields is inversely proportional to the size of the extra
-dimension. By taking the radius to be extremely small the appearance of these
-unobserved massive fields is avoided. This leaves a
+dimension. The appearance of these
+unobserved massive fields is avoided by taking the radius to be extremely small.
+This leaves a
 massless degree of freedom which must be accounted for in the four-dimensional
 effective action. 
 
 
 A similar procedure is undertaken when compactifying string theory from a
 10 or 11 dimensional description down to four dimensions (for reviews see
-\cite{douglas,grana}).
+Refs.~\cite{douglas,grana}).
 In ten dimensional type IIB theory the six extra dimensions are
 compactified into a Ricci flat Calabi-Yau (CY) manifold which can be described
 by three complex coordinates \cite{Yau1977}. 
@@ -305,7 +306,7 @@ If $L$ is taken to infinity, the $w\ne 0$ states become infinitely massive and
 only the $w=0$ state is left with a continuum of momentum values. Thus, the
 uncompactified result is recovered. However, if $L\rightarrow0$, the $j\ne 0$
 states are now infinitely massive as in the standard KK picture. Unlike the
-standard case, there is now a continuum of winding states $w\ne 0$,
+standard case, there is now a continuum of winding states with $w\ne 0$,
 again giving an
 uncompactified dimension. This major departure from the standard
 compactification result is a purely stringy effect. 
@@ -353,10 +354,10 @@ direction. This also follows if more than one coordinate is made periodic.
 If $D-p-1$ spatial dimensions are compactified, for some $p$, then the ends of
 the open
 strings can still move freely in the other $p$ spatial dimensions on a $p+1$
-dimensional hypersurface. This hypersurface is called called a Dirichlet brane or
+dimensional hypersurface. This hypersurface is called a Dirichlet brane or
 D$p$-brane. 
 % 
-In Type IIB theory with supersymmetric strings an extra condition implies that
+In Type IIB theory with supersymmetric strings, an extra condition implies that
 only D$p$-branes with $p=1,3,5,7,9$ are stable\footnotemark.
 \footnotetext{There is also a $p=-1$ D-instanton in which the time direction
 along with all spatial directions is subject to Dirichlet boundary conditions
@@ -365,7 +366,7 @@ along with all spatial directions is subject to Dirichlet boundary conditions
 
 D$p$-branes can be considered as dynamical objects in their own right with a
 tension given by \cite{Johnson2000}\footnote{$T_p$ here is $\tau_p$ in
-\cite{Johnson2000}.}
+\Rref{Johnson2000}.}
 % 
 \begin{equation}
 \label{eq:branetensiondefn-dbiintro}
@@ -373,14 +374,14 @@ tension given by \cite{Johnson2000}\footnote{$T_p$ here is $\tau_p$ in
 \end{equation}
 % 
 where $g_s$ is the string coupling and $m_s$ is the string mass scale.
-The dynamics is governed by the action 
+Their dynamics is governed by the action 
 % 
 \begin{equation}
 \label{eq:gendbiaction-dbiintro}
  S_\mathrm{DBI} = -T_p \int \d^{p+1}\xi \sqrt{-\hat{g}}\,,
 \end{equation}
 where $\hat{g}_{ab}$ is the induced metric on the brane with internal
-coordinates $\xi^a$ for $a=0,\ldots,p$. This is the general form of the DBI
+coordinates $\xi^a$, for $a=0,\ldots,p$. This is the general form of the DBI
 action which will be used later.
 
 
@@ -389,7 +390,7 @@ with a
 sufficiently flat potential is required to satisfy the slow roll conditions outlined
 in
 Section \ref{sec:slowroll-intro}. Since D-branes are charged (with Ramond-Ramond
-charge), a D-brane and anti-D-brane
+charge), a D-brane and an anti-D-brane
 ($\overline{\mathrm{D}}$) separated by some distance will be attracted to each other.
 The separation distance
 can be identified as a scalar degree of freedom and under appropriate conditions
@@ -402,7 +403,7 @@ accounted for in the dynamics unless some way can be found to stabilise them by
 fixing their masses to be large.
 Initial efforts to induce inflation using D-branes ignored the issue of moduli
 stabilisation. Instead, it was
-assumed that whatever stabilisation mechanism was used would have no discernable
+assumed that whatever stabilisation mechanism was used would have no discernible
 effect on the inflationary physics. Kachru \etal \cite{brane4} recognised that
 in fact stabilisation will be important and must be taken into account.
 
@@ -415,8 +416,8 @@ be stabilised so that they do not appear in the effective action as
 massless fields. This can be achieved by switching on background fluxes in the
 compactified space. These fluxes are analogous to magnetic
 fields in the higher dimensional space. By Gauss' theorem  the compact space
-will now have a quantized non-zero total charge.
-In the presence of fluxes a general form for the ten dimensional metric is given by
+will now have a quantised non-zero total charge.
+In the presence of fluxes, a general form for the ten dimensional metric is
 \cite{Baumann:2009ni}:
 \begin{equation}
 \label{eq:warpedmetric-dbiintro}
@@ -484,24 +485,25 @@ is known as the A-cycle. The second, called the B-cycle, is the $S^2$ times a
 circle extended in the direction of the throat radius. The three-form fluxes
 $F_3$ and $H_3$, aligned with these cycles, are turned on to make the warped
 throat a solution of the Einstein equations \cite{cline}. The cycles are threaded with
-quantized units of flux $M$ and $K$ given by: 
+quantised units of flux $M$ and $K$ given by: 
 \begin{align}
 \label{eq:fluxdefn-dbiintro}
  \frac{1}{2\pi\alpha'}\int_A F_3 &= M \,, \\
  \frac{1}{2\pi\alpha'}\int_B H_3 &= -K\,, 
 \end{align}
 where $M,K\in \mathbb{Z}$.
-The D$3$ charge of the throat, $N$, is related to the quantized fluxes by
+The D$3$ charge of the throat, $N$, is related to the quantised fluxes by
 $N=MK$.
 The wrapping of the fluxes along the cycles of the conifold smooths out the
 conical singularity at the tip of the throat with an $S^3$ cap 
-\cite{ks,kt} and the warp factor asymptotes to 
+\cite{ks,kt}, as shown in Figure~\ref{fig:conifold-dbiintro}, and the warp factor
+asymptotes to 
 a constant value in this region.
 
 
 In this section we have summarised the concepts that will be
 required to discuss DBI inflation. The compactified warped throat described
-here will provide the setting for this string theory realisation of
+here will provide the setting for this string theoretic realisation of
 inflation. 
 % In Section \ref{sec:stringcos-dbiintro} we outlined how cosmological
 % observations can constrain the parameter space of string theories. 
@@ -524,7 +526,7 @@ enable concrete constraints to be formulated.
 % We will now concentrate on one particular non-canonical action. 
 The DBI scenario is based on the compactification of type IIB string theory on a 
 Calabi-Yau (CY) three-fold, where the form-field fluxes generate locally
-warped regions known as `throats' as described above.  The propagation of a 
+warped regions known as throats, as described above.  The propagation of a 
 ${\rm D3}$-brane in such a region can drive inflation, where the inflaton 
 field is identified with the radial position of the brane 
 along the throat. Inflation can occur whether the brane moves towards or away from the tip of the
@@ -535,7 +537,7 @@ equation for the inflaton is determined by a DBI action.
 % 
 \begin{figure}[htbp]
  \centering
- \includegraphics[width=\textwidth]{dbi/graphs/cymanifold}
+ \includegraphics[width=0.8\textwidth]{dbi/graphs/cymanifold}
  \caption[Calabi-Yau Manifold]{A representation of the Calabi-Yau manifold in the 6
 compactified
 dimensions. Throats are connected to the main bulk. D3-branes appear as dots.}
@@ -597,7 +599,7 @@ varying inflaton can be expressed in the form \cite{brane6}
 % 
 
 In Section~\ref{sec:noncanoninfl} we introduced the speed of sound of
-inflaton fluctuations, defined by \eq{eq:defcs-dbiintro}. For the kinetic function in
+inflaton fluctuations. For the kinetic function in
 \eq{eq:Pdefn-dbiintro}, we find from
 \eq{eq:defcs-dbiintro} that
 % 
@@ -694,7 +696,7 @@ When $c_s\PX=1$ the second term in
 \end{equation}
 % 
 When $c_s\ll1$ a significant level of non-Gaussianity is produced.
-
+% 
 For a homogeneous field $2X = \dot{\vp}^2$, so from \eq{eq:csdefn-dbiintro} we
 find that
 \begin{equation}
@@ -783,7 +785,8 @@ DBI scenario allow an upper limit to be imposed on $r$ using this relation.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 In this chapter we have introduced the Dirac-Born-Infeld inflationary scenario.
 Many attempts have been made to provide an inflationary expansion phase in the
-early universe using string theory. In compactifying from 10 dimensions to 4,
+early universe using string theory. In compactifying from ten dimensions down to
+four,
 complicated geometries and additional fluxes must be used to stabilise the
 remaining moduli fields. 
 
@@ -791,7 +794,8 @@ The DBI scenario
 is a particular example of the non-canonical inflationary paradigm described in
 Section~\ref{sec:noncanoninfl}. 
 The radial position of a D3-brane in a warped throat is identified as the inflaton field. While the
-brane moves up or down the throat, the kinetic energy of the inflaton is bounded above by requiring
+brane propagates up or down the throat, the kinetic energy of the inflaton is bounded
+above by requiring
 the sound speed of fluctuations to be real. This bound holds no matter how steep the potential of
 the field. The relativistic limit takes the bound to be close to saturation and the sound speed to
 be small.
