Changed to spacetime.

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.62 2009/11/27 18:49:21 ith Exp $
+% $Id: dbi-intro.tex,v 1.63 2009/11/28 12:42:08 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.62 2009/11/27 18:49:21 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.63 2009/11/28 12:42:08 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -160,7 +160,7 @@ fruitful for generating models of cosmological inflation \cite{cline,
 Linde:2005dd}. 
 % 
 % The most striking prediction of string theory is the existence of other
-% dimensions beyond the four space-time dimensions that we
+% dimensions beyond the four spacetime dimensions that we
 % experience. Recovering the physics of our familiar $3+1$ dimensional universe
 % clearly requires that these extra dimensions be hidden in some way. How this
 % is
@@ -218,10 +218,10 @@ Linde:2005dd}.
 
 \subsection{Extra Dimensions}
 String theory predicts that the one time-like and three spatial dimensions that
-constitute the observable universe do not represent the complete space-time manifold.
+constitute the observable universe do not represent the complete spacetime manifold.
 Instead,
 our universe is a 10 or
-11 dimensional space-time and physical theories in 3+1 dimensions must
+11 dimensional spacetime and physical theories in 3+1 dimensions must
 therefore be able to explain why the 
 other 6 or 7 dimensions are unobservable. One of the challenges of string
 theory is how 
@@ -252,7 +252,7 @@ rescaled onto another Ricci flat metric, there is no unique solution for the
 metric on the CY manifold. Instead a family of solutions exists with many free
 parameters. These parameters remain after the compactification, in
 analogy to the size of the extra dimension in KK compactification, and can depend
-on position in the four-dimensional space-time. They appear as fields
+on position in the four-dimensional spacetime. They appear as fields
 in the four-dimensional theory and are known as moduli. 
 These fields are not subject to any symmetry and so their individual values
 at different spacetime points can affect the physics at those points.
@@ -270,7 +270,7 @@ at different spacetime points can affect the physics at those points.
 % dimensions we have a metric tensor $\hat{g}_{MN}(x,z)$ where $M$ and
 % $N$ run over all $(D+1)$ dimensions and 
 % x signifies the $D$ coordinates of the lower-dimensional spacetime.
-% Hats  denote quantities in the $(D+1)$ space-time.
+% Hats  denote quantities in the $(D+1)$ spacetime.
 % A Fourier decomposition of $\hat{g}_{MN}$ gives an infinite number
 % of fields in $D$ dimensions:
 % \begin{equation}
