Final corrections and spellchecked.

--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.67 2009/11/26 16:29:09 ith Exp $
+% $Id: dbi.tex,v 1.68 2009/11/28 12:44:01 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.67 2009/11/26 16:29:09 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.68 2009/11/28 12:44:01 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -36,7 +36,7 @@ general form of the DBI action.
 
 % 
 The gravitational wave background generated in DBI 
-inflation was initially investigated by Baumann and McAllister (BM) 
+inflation was initially investigated by Baumann \& McAllister (BM) 
 \cite{bmpaper}. By exploiting a relationship due originally 
 to Lyth \cite{lyth}, these authors derived a field-theoretic upper limit 
 to the tensor amplitude and concluded that 
@@ -50,9 +50,9 @@ data when this constraint is imposed \cite{bean}.
 Our aim in this chapter is to derive observational constraints on DBI inflation
 that are 
 insensitive to the details of the throat geometry and the inflaton potential. 
-In general, there are two realizations of the scenario, 
+In general, there are two realisations of the scenario, 
 which are referred to as the ultra-violet (UV) and infra-red (IR) 
-versions. These are characterized respectively by whether the brane is 
+versions. These are characterised respectively by whether the brane is 
 moving towards or away from the tip of the throat. 
 We focus initially on the UV scenario 
 and derive an upper bound on 
@@ -62,12 +62,13 @@ the variation of the inflaton field during the era when
 observable scales cross the Hubble radius, and 
 we find in general that the tensor-scalar ratio must satisfy 
 $r \lesssim 10^{-7}$. This 
-is below the projected sensitivity of future Cosmic Microwave Background (CMB) polarization 
+is below the projected sensitivity of future CMB
+polarisation 
 experiments \cite{Baumann:2008aq,vpj}. 
 
 On the other hand, the WMAP5 data 
-favours a red perturbation spectrum with 
-$n_s<1$ when  
+favours a red perturbation spectrum, with 
+$n_s<1$, when  
 the scalar spectral index is effectively constant \cite{Komatsu:2008hk}. 
 For models which generate such a spectrum, 
 we identify a corresponding lower limit on the 
@@ -79,12 +80,12 @@ by the observations.
 Therefore a reconciliation between theory and observation 
 requires either a relaxation of the upper limit on $r$ or a blue 
 spectral index $(n_s >1)$. The DBI scenario would need 
-to be generalized in a suitable way for the upper bound on $r$
+to be generalised in a suitable way for the upper bound on $r$
 to be weakened. Necessary conditions are identified that a 
-generalized action must satisfy for the BM constraint and our newly derived
+generalised action must satisfy for the BM constraint and our newly derived
 bound to be relaxed. 
 Such conditions are shown in Chapter~\ref{ch:multibrane} to be
-realized in a recently proposed IR version of DBI inflation driven
+realised in a recently proposed IR version of DBI inflation driven
 by multiple coincident branes \cite{thomasward}. 
 
 % 
@@ -100,23 +101,23 @@ by multiple coincident branes \cite{thomasward}.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 %
 
-In \Rref{bmpaper} Baumann and McAllister
+In \Rref{bmpaper} Baumann \& McAllister
 derived a field-theoretic upper bound on the tensor-scalar ratio. They achieved
 this by noting that the four-dimensional Planck mass is related 
 to the volume of the compactified CY manifold, $V_6$, such that 
 $\Mpl^2=V_6 \kappa_{10}^{-2}$, where $\kappa_{10}^2 \equiv 
 \frac{1}{2} (2\pi )^7 g_s^2 m_s^{-8} = \pi /T_3^{2}$ for a 
-${\rm D3}$-brane \footnote{We parameterise the Planck scale 
+${\rm D3}$-brane\footnote{We parametrise the Planck scale 
 in terms of the ${\rm D3}$-brane tension out of convenience, 
 and note that there is no physical relationship between the two.}.
 In general, the compactified volume 
 is comprised of bulk and throat contributions, 
-$V_6 = V_{6,{\rm bulk}}+V_{6,{\rm throat}}$. The latter is 
+$V_6 = V_{6\,{\rm bulk}}+V_{6\,{\rm throat}}$. The latter is 
 given by
 % 
 \begin{equation}
 \label{eq:throatvolume}
-V_{6,\mathrm{throat}} = \mathrm{Vol}(X_5)  
+V_{6\,\mathrm{throat}} = \mathrm{Vol}(X_5)  
 \int_0^{\rho_{UV}} \d\rho \frac{\rho^5}{h^4(\rho )} \,,
 \end{equation}
 % 
@@ -140,8 +141,8 @@ with the bulk manifold.}
 
 If one assumes that the bulk volume is 
 non-negligible relative to 
-that of the throat (i.e. $V_{6,\mathrm{throat}} < V_{6}$), 
-it follows that $\Mpl^2> V_{6,\mathrm{throat}}\kappa_{10}^{-2}$. 
+that of the throat ($V_{6\,\mathrm{throat}} < V_{6}$), 
+it follows that $\Mpl^2> V_{6\,\mathrm{throat}}\kappa_{10}^{-2}$. 
 For a warped $AdS_5 \times X_5$ geometry, this leads to an 
 upper limit on the total variation of the inflaton field in 
 the throat region in terms of the D3 charge:
@@ -158,8 +159,8 @@ corresponding limit on the tensor-scalar ratio by noting from
 the definition (\ref{eq:epsdefn-dbiintro})
 that $\dot{\varphi}^2 /\Mpl^2 = 2\varepsilon_H H^2/P_{,X}$.
 This implies that the variation of the inflaton field 
-is given by the Lyth bound \eq{eq:genlyth-dbiintro} 
-\cite{lyth,bmpaper}
+is given by the Lyth bound \eqref{eq:genlyth-dbiintro} 
+\cite{lyth,bmpaper}:
 % 
 \begin{equation}
 \label{eq:rtheory}
@@ -169,7 +170,7 @@ is given by the Lyth bound \eq{eq:genlyth-dbiintro}
 % 
 where $\N$ is the number of e-foldings as defined in \eq{eq:nefolddefn-intro}. 
 Since $\vp_*$, the field value during observable inflation,  is
-less than $\varphi_{UV}$
+less than $\varphi_{UV}$,
 this results in an upper bound on the observable tensor-scalar ratio
 \cite{bmpaper}: 
 % 
@@ -178,7 +179,7 @@ this results in an upper bound on the observable tensor-scalar ratio
 r_*  < \frac{32}{N (\Neff)^2} \,.
 \end{equation}
 % 
-The effective number of e-foldings $\Neff$, defined in
+The effective number of e-foldings, $\Neff$, defined in
 \eq{eq:Neff-dbiintro}, 
 is a model-dependent parameter that quantifies 
 how $r$ varies during the final stages of inflation. Since $c_s\PX = 1$ in the
@@ -217,7 +218,7 @@ implies that
 % 
 This change in the inflaton value will correspond 
 to a fraction of the throat volume, 
-$| \Delta V _{6,*}|  < {V_{6,\mathrm{throat}}} \lesssim {V_6} $,
+$| \Delta V _{6\,*}|  < {V_{6\,\mathrm{throat}}} \lesssim {V_6} $,
 where equality in the second limit arises if
 the bulk volume is negligible. Hence, 
 $| \Delta \varphi_* |$ is bounded such that  
@@ -225,7 +226,7 @@ $| \Delta \varphi_* |$ is bounded such that
 \begin{equation}
 \label{eq:halfwayconstraint}
 \left( \frac{\Delta \varphi}{\Mpl} \right)^2_{*} < 
-\frac{T_3 \kappa_{10}^2 (\Delta \rho_{*})^2}{|\Delta V_{6,*}|} \,.
+\frac{T_3 \kappa_{10}^2 (\Delta \rho_{*})^2}{|\Delta V_{6\,*}|} \,.
 \end{equation}
 %  
 
@@ -233,7 +234,7 @@ $| \Delta \varphi_* |$ is bounded such that
 The observations of the CMB 
 that directly constrain the primordial tensor perturbations only 
 cover multipole values in the range $2 \le l \lesssim 100$. 
-This is equivalent to no more than ${\Delta \N_{*}} \simeq {4}$ 
+This is equivalent to ${\Delta \N_{*}} \simeq {4}$ 
 e-foldings of inflationary expansion and, in general,   
 corresponds to a narrow range of inflaton values. 
 To a first approximation, therefore, the fraction of the throat volume 
@@ -242,7 +243,7 @@ observation can be estimated to be
 % 
 \begin{equation}
 \label{eq:trapezium}
-| \Delta V_{6,*} | \simeq \mathrm{Vol}(X_5) 
+| \Delta V_{6\,*} | \simeq \mathrm{Vol}(X_5) 
 \frac{|\Delta \rho_*| \rho^5_{*}}{h^{4}_{*}} \,.
 \end{equation}
 % 
@@ -251,7 +252,7 @@ then implies that
 % 
 \begin{equation}
 \label{eq:trapeziumlimit}
-|\Delta V _{6,*}| > \mathrm{Vol}(X_5) 
+|\Delta V _{6\,*}| > \mathrm{Vol}(X_5) 
 \frac{(\Delta \rho_* )^6}{h^{4}_*}  \,.
 \end{equation}
 % 
@@ -262,8 +263,8 @@ Substituting the condition \eqref{eq:trapeziumlimit} into the bound
 \left( \frac{\Delta \varphi}{\Mpl} \right)_*^6 < \frac{\pi T_3}{\Vol} 
 \left( \frac{h_*}{\Mpl} \right)^4 \,,
 \end{equation}   
-and using $T(\vp) = T_3 h^4$ and the CMB normalization
-\eqref{eq:obswarp-dbiintro} yields the upper limit
+and using $T(\vp) = T_3 h^4$ and 
+\eq{eq:obswarp-dbiintro} yields the upper limit
 % 
 \begin{equation}
 \label{eq:boundpower6}
@@ -289,7 +290,7 @@ Condition (\ref{eq:generalbound}) is
 only weakly dependent on the level of non-Gaussianity 
 when $-\fnleq > 5$ and we may therefore neglect the 
 factor involving this parameter. 
-Substituting the WMAP5 normalization 
+Substituting the WMAP5 normalisation 
 $\Pr \simeq 2.5 \times 10^{-9}$ then implies that
 %  
 \begin{equation}
@@ -312,7 +313,7 @@ r_* < 10^{-7} \,.
 % 
 The bound \eqref{eq:standardbound} is the main result of this section.
 This value of $r$ is significantly below the sensitivity 
-of future CMB polarization experiments, which will measure 
+of future CMB polarisation experiments, which will measure 
 ${r} \, {\gsim} \, 10^{-4}$ \cite{Baumann:2008aq,vpj}. 
 If CMB  
 observations are able to span the full range of e-foldings such that
@@ -336,7 +337,7 @@ Taylor series, we find that
 % 
 \begin{equation}
 \label{eq:limits}
-\Delta V_{6,*} \simeq \mathrm{Vol}(X_5) \frac{\rho^5_{*}}{h^{4} 
+\Delta V_{6\,*} \simeq \mathrm{Vol}(X_5) \frac{\rho^5_{*}}{h^{4} 
 (\rho_{*} )}(\Delta \rho_*) 
 \left[ 1 +\frac{(5-4 \alpha )}{2} 
 \frac{(\Delta \rho_*)}{\rho_{*}} \right]  \,.
@@ -352,8 +353,7 @@ $\alpha (\rho)$ satisfies $0 \le \alpha (\rho ) \le 1$
 over observable scales. 
 We conclude, therefore, that \eq{eq:trapezium} 
 provides a sufficiently good estimate of the volume element  
-for a generic warp factor
-\footnote{As we shall see in the following section, 
+for a generic warp factor\footnote{As we shall see in the following section, 
 even an order of magnitude error will make little 
 difference to our final conclusions.}.  
 % 
@@ -382,7 +382,7 @@ when the running in the spectral index, $\alpha_s \equiv \d n_s/\d\ln k$,
 is negligible \cite{Komatsu:2008hk}.  
 Furthermore, a blue spectral index 
 is only marginally consistent with the data when $r\ne 0$ and $\alpha_s=0$. 
-(The inferred upper limit is $n_s < 1.018$).
+(The inferred upper limit is $n_s < 1.018$.)
 Although the results from WMAP5 do allow for a blue spectrum if there is 
 significant negative running in the spectral index, we will 
 focus in this section 
@@ -541,7 +541,7 @@ As noted in Refs.~\cite{bmpaper} and \cite{bean}, condition
 if $X_5$ corresponds to a $Y^{p,q}$ space, 
 which has arbitrarily small volume in the limit  
 $q =1$ and $p \rightarrow \infty$ \cite{gauntlett}. 
-Small volumes could also be realized 
+Small volumes could also be realised 
 by orbifolding the $S^2$ symmetry of a KS-type throat. 
 
 
@@ -553,13 +553,13 @@ could be violated in IR versions of the scenario, where
 observable scales crossed the Hubble radius when the 
 brane was near the tip of the throat and $\varphi \ll \Mpl$
 \cite{brane12,brane14}. 
-Nonetheless, we emphasize that the upper bound (\ref{eq:upperbound})
+Nonetheless, we emphasise that the upper bound (\ref{eq:upperbound})
 on the tensor modes 
 will also apply to any IR DBI model for which 
 $|\Delta \varphi_* | < \varphi_*$.  
 In view of the above discussion, 
 we will proceed in the following section
-to discuss a framework for generalizing the DBI scenario so 
+to discuss a framework for generalising the DBI scenario so 
 that the constraints on the tensor modes can be satisfied. 
 % 
 % 
@@ -615,7 +615,7 @@ the inflaton, defined in \eq{eq:defcs-dbiintro} is given by
 c_s = \sqrt{1-f_2 X} = \frac{f_1f_2}{2} \frac{1}{P_{,X}}  \,,
 \end{equation}
 % 
-and the scalar perturbation amplitude \eqref{eq:Ps-dbiintro} by
+and the scalar power spectrum \eqref{eq:Ps-dbiintro} by
 % 
 \begin{equation}
 \label{eq:spectrum-dbi}
@@ -627,8 +627,8 @@ non-Gaussianity constraint (\ref{eq:fnlcs-dbiintro}) remain unaltered
 for this more general class 
 of models \cite{lidser2}. It 
 follows, therefore, 
-that the CMB normalization condition (\ref{eq:obswarp-dbiintro}) 
-generalizes to a constraint on the value of $f_1 (\varphi_*)$:
+that the CMB normalisation condition (\ref{eq:obswarp-dbiintro}) 
+generalises to a constraint on the value of $f_1 (\varphi_*)$:
 %   
 \begin{equation}
 \label{eq:observef1}
@@ -637,7 +637,7 @@ generalizes to a constraint on the value of $f_1 (\varphi_*)$:
 \end{equation}
 % 
 Finally, the expression for the scalar spectral index
-follows most directly by generalizing \eq{eq:obscon1} 
+follows most directly by generalising \eq{eq:obscon1} 
 via the correspondence (\ref{eq:defvarphi}). It  
 is straightforward to show that
 %  
@@ -684,14 +684,14 @@ $AdS_5 \times X_5$ away from the tip of the throat. In addition,
 if observable scales leave the horizon 
 while the brane is inside the throat, the change in the field value 
 must satisfy $| \Delta \varphi_*|<\varphi_{UV}$. It follows from   
-\eq{eq:approxlyth-dbiintro} therefore, that\footnote{We are 
+\eq{eq:approxlyth-dbiintro}, therefore, that\footnote{We are 
 being conservative by restricting our discussion to the 
 observable phase of inflation. More generally, if 
 $f_1f_2$ remains nearly constant over the last $\N$ 
 e-foldings of inflation, 
 we may substitute $\Delta \N_* \rightarrow 
 \Neff$, where $\Neff$ 
-may be as large as 60. Thus, the generalized bound 
+may be as large as 60. Thus, the generalised bound 
 (\ref{eq:genBMbound}) should be regarded as a necessary 
 (but not sufficient) condition to be satisfied by the tensor modes.} 
 % 
@@ -705,10 +705,10 @@ r_*< \frac{32}{N (\Delta \N_{*})^2} (c_s\PX)_* = \frac{16}{N (\Delta \N_{*})^2}
 
 We will refer to condition 
 (\ref{eq:genBMbound}) as the 
-generalized BM bound. 
+generalised BM bound. 
 Combining expressions (\ref{eq:observef1}) and (\ref{eq:genBMbound}) then
 results in a necessary condition on the value of $f_2(\varphi_*)$ 
-for the generalized BM bound to be satisfied:
+for the generalised BM bound to be satisfied:
 %  
 \begin{equation}
 \label{eq:f2bound}
@@ -747,7 +747,7 @@ r_* < \frac{4(1-n_s)}{\sqrt{-3\fnleq}}  \,.
 % 
 Combining conditions (\ref{eq:f2bound}) and (\ref{eq:IRupper}) 
 therefore leads to a constraint on $f_2 (\varphi_*) $
-for the generalized BM bound to be satisfied in IR inflation: 
+for the generalised BM bound to be satisfied in IR inflation: 
 % 
 \begin{equation}
 \label{eq:f2IRlower}
@@ -760,8 +760,8 @@ The upper bound on $r$ that we derived in Section~\ref{sec:upper-dbi} arises
 because the warp factor in standard DBI models 
 completely specifies the kinetic 
 energy of the inflaton field. Deriving a corresponding bound for 
-the generalized model (\ref{eq:genaction-dbi}) would be more involved, 
-since the CMB normalization (\ref{eq:observef1}) only 
+the generalised model (\ref{eq:genaction-dbi}) would be more involved, 
+since the CMB normalisation (\ref{eq:observef1}) only 
 directly constrains the function 
 $f_1 (\varphi )$ and this may not necessarily depend on the warp factor. 
 Nonetheless, the constraints \eqref{eq:halfwayconstraint} and
@@ -810,7 +810,7 @@ h_*^{4/3} N < 300 \frac{(\Delta \N)^2_*}{\Neff^2} \,.
 \end{equation}
 % 
 
-To summarize this section, 
+To summarise this section, 
 expressions \eqref{eq:genBMbound} and \eqref{eq:LHbound} imply that the 
 bounds described in Section~\ref{sec:upper-dbi}
 could be relaxed if $2c_s\PX = f_1f_2 \gg 1$ on observable scales. 
@@ -869,8 +869,8 @@ next chapter.
 % and note that there is no physical relationship between the two.}. 
 % Hence the Planck mass is bounded from 
 % below by the volume of a throat region, 
-% $\Mpl^2 >V_{6,{\rm th}} \kappa_{10}^{-2}$, 
-% where $V_{6,{\rm th}} \lsim V_6$ denotes the throat volume. 
+% $\Mpl^2 >V_{6\,{\rm th}} \kappa_{10}^{-2}$, 
+% where $V_{6\,{\rm th}} \lsim V_6$ denotes the throat volume. 
 % For an $AdS_5 \times X_5$ throat, Baumann \& McAllister (BM)
 % exploited this inequality to derive an upper limit on the 
 % maximum variation of the inflaton field in the throat, 
@@ -895,11 +895,11 @@ next chapter.
 % % 
 % \begin{equation}
 % \label{eq:approxvol}
-% | \Delta V_{6,*} | \simeq \Vol \frac{| \Delta \rho_*| \rho_*^5}{h_*^4}
+% | \Delta V_{6\,*} | \simeq \Vol \frac{| \Delta \rho_*| \rho_*^5}{h_*^4}
 % \end{equation}
 % % 
-% and, since $| \Delta V_{6,*} |< 
-% V_{6,{\rm th}}$, it follows that
+% and, since $| \Delta V_{6\,*} |< 
+% V_{6\,{\rm th}}$, it follows that
 % %  
 % \begin{equation}
 % \label{eq:firstbound-multi}
@@ -924,7 +924,7 @@ next chapter.
 % (\ref{eq:delta1constraint}) with \eq{eq:approxvol} then implies that
 % %  
 % \begin{equation}
-% | \Delta V_{6,*} | > \Vol \frac{( \Delta \rho_* )^6}{h_*^4}
+% | \Delta V_{6\,*} | > \Vol \frac{( \Delta \rho_* )^6}{h_*^4}
 % \end{equation}
 % % 
 % and substituting this constraint into the bound (\ref{eq:firstbound-multi})
@@ -1050,7 +1050,7 @@ between the
 Klebanov-Strassler (KS) \cite{ks} and Maldacena-Nu\~{n}ez
 \cite{Maldacena:2000yy} throats. As the throat geometry moves away from KS, more
 non-Gaussianity is produced whereas the tensor-scalar ratio is reduced.
-The choice of throat geometry, therefore, could have an affect on the bounds on $r$
+The choice of throat geometry, therefore, could affect the bounds on $r$
 and must be considered when models are compared.
 
 
@@ -1121,7 +1121,7 @@ that can occur during the observable stages of inflation and assumed
 only that the brane was propagating inside the throat during that epoch. 
 The bound (\ref{eq:upperbound}) is valid for an arbitrary inflaton potential and 
 warp factor (modulo some weak caveats) and can be expressed 
-entirely in terms of observable parameters once the volume of 
+entirely in terms of observable parameters, once the volume of 
 the five-dimensional sub-manifold of the throat has been specified. 
 The inferred upper limit on $r$ is surprisingly strong. 
 We find that the standard UV  
@@ -1129,7 +1129,7 @@ scenario predicts tensor perturbations that are undetectably small,
 at a level ${r_*} \lesssim {10^{-7}}$. 
 
 The current WMAP5 data 
-favours models that generate a red spectral index $n_s<1$
+favours models that generate a red spectral index, $n_s<1$,
 when both the gravitational waves and running in the scalar 
 spectral index are negligible. For UV versions of the scenario, 
 we have identified a corresponding 
@@ -1155,10 +1155,10 @@ is sufficiently negative, but is only marginally
 consistent if just the tensor modes are non-negligible.  The 
 upper limit on $r$ can be weakened by reducing 
 the volume of $X_5$ or 
-by generalizing the DBI action. Furthermore, it need not necessarily 
+by generalising the DBI action. Furthermore, it need not necessarily 
 apply in IR versions of the scenario, although the BM bound will still hold
 in such cases. 
-We considered a generalized version of the 
+We considered a generalised version of the 
 DBI action and identified a necessary condition on the form of such  
 an action for the BM bound to be relaxed.
 
@@ -1177,6 +1177,6 @@ In conclusion therefore, we have shown that primordial gravitational wave constr
 combined with cosmological observations of the density perturbation
 spectrum act as a powerful discriminant of DBI inflationary models. 
 They also serve as an important observational guide for identifying viable 
-generalizations of the scenario. In Chapter~\ref{ch:multibrane} we will explore
-one particular generalisation, the multiple co-incident brane scenario
+generalisations of the scenario. In Chapter~\ref{ch:multibrane} we will explore
+one particular generalisation, the multi-coincident brane scenario
 introduced in \Rref{thomasward}.
